[package]
name = "rockchip-universal-imager"
version = "0.1.0"
description = "Rockchip flashing and eMMC helper"
authors = ["Rockchip Universal Imager"]
# Cargo currently supports up to 2024 (not 2026 yet).
edition = "2024"
rust-version = "1.85"

[lib]
name = "rockchip_universal_imager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"

# Unix: libusb C via rusb for hotplug (D4 try-everywhere; primary targets macOS/Linux).
[target.'cfg(unix)'.dependencies]
rusb = { version = "0.9", features = [] }

[features]
default = []
